collector/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: collector-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: collector
  template:
    metadata:
      labels:
        app: collector
    spec:
      containers:
        - name: collector-nginx-container
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
          - name: collector-configmap
            mountPath: /usr/share/nginx/html/index.html
            subPath: index.html
      volumes:
      - name: collector-configmap
        configMap:
          name: collector-configmap
          items:
          - key: index.html
            path: index.html
